--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="modalContainer" class="modal hidden">
         <div class="modal-content">
             <span id="closeModalButton" class="close-button">&times;</span>
-            <p>สามารถพิมพ์ได้ทั้งพิมพ์เล็ก และ และพิมพ์ใหญ่ และไม่มีข้อจับกัดในช่องว่างแล้วนะครับ. 👨‍💻</p>
+            <p>สามารถพิมพ์ได้ทั้ง พิมพ์เล็ก,พิมพ์ใหญ่ และไม่มีข้อจำกัดในช่องว่างแล้วนะครับ. 👨‍💻</p>
         </div>
     </div>
 
