--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
         <!-- Sidebar content goes here -->
         <ul>
-            <li><a href="https://timely-blini-7e8176.netlify.app/">- Vocabulary Set 2</a></li>
+            <li><a href="https://65561fe6f9650a0008ab64bc--magenta-taffy-f18ff6.netlify.app/">- Vocabulary Set 2</a></li>
             <li><a href="https://translate.google.co.th/?hl=th&tab=TT">- Google Translate</a></li>
             <li><a href="https://chat.openai.com/">- Chat GPT</a></li>
         </ul>
