--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Sidebar content goes here -->
         <ul>
             <li><a href="https://capable-crumble-4fa807.netlify.app/">- Vocabulary Set 2</a></li>
-            <li><a href="https://www.wordreference.com/">- Wordreference</a></li>
+            <li><a href="https://www.wordreference.com/">- Word Reference</a></li>
             <li><a href="https://translate.google.co.th/?hl=th&tab=TT">- Google Translate</a></li>
             <li><a href="https://chat.openai.com/">- Chat GPT</a></li>
         </ul>
