--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <div class="modal-content">
             <span id="closeModalButton" class="close-button">&times;</span>
             <p>สามารถพิมพ์ได้ทั้ง พิมพ์เล็ก,พิมพ์ใหญ่ และไม่มีข้อจำกัดในช่องว่างแล้วนะครับ. 👨‍💻</p>
+            <ul>
+                <li>List item 1</li>
+                <li>List item 2</li>
+            </ul>
         </div>
     </div>
 
