--- a/index.html
+++ b/index.html
@@ -41,10 +41,64 @@
     <div id="modalContainer" class="modal hidden">
         <div class="modal-content">
             <span id="closeModalButton" class="close-button">&times;</span>
-            <p>สามารถพิมพ์ได้ทั้ง พิมพ์เล็ก,พิมพ์ใหญ่ และไม่มีข้อจำกัดในช่องว่างแล้วนะครับ. 👨‍💻</p>
+            <p> Vocabulary 👩🏻‍🏫 </p>
             <ul>
-                <li>List item 1</li>
-                <li>List item 2</li>
+                <li>ภูเขาไฟ - el volcan</li>
+                <li>กองโจร - la querrillera</li>
+                <li>รางวัล - el premio</li>
+                <li>สนับสนุน - apadrinar</li>
+                <li>แต่งตั้ง - nombrar</li>
+                <li>สมาชิก - miembro</li>
+                <li>คณะกรรมการ - la comision</li>
+                <li>ครึ่งทาง - medio camino</li>
+                <li>สัจนิยม - el realismo</li>
+                <li>ความรุนแรง - la crudeza</li>
+                <li>ประจำวัน - cotidiana</li>
+                <li>ตลอดกาล - cronico/a</li>
+                <li>ตึงเครียด - convulso/a</li>
+                <li>ปัจจุบัน - La actualidad</li>
+                <li>อิทธิพล - La influencia</li>
+                <li>ท่วมท้น, ล้นหลาม - arrollador/a</li>
+                <li>สองด้าน - Ambos lados</li>
+                <li>ศาสตร์, แขนง - La disciplina</li>
+                <li>เน้นย้ำ (v.) - Destacar</li>
+                <li>วรรณกรรม - La literatura</li>
+                <li>หัวข้อ - El título</li>
+                <li>แผ่นดิสก์ - Un disco</li>
+                <li>ที่อายุ 80 ปี - Octogenario</li>
+                <li>ที่อายุ 30 ปี - Treintañero</li>
+                <li>ยิปต์ซี - Gitano</li>
+                <li>ก่อตั้ง (v.) - Fundar</li>
+                <li>กก. แคริบเบียน - Caribaño/a</li>
+                <li>อุ้งเท้า, กรงเล็บ - La garra</li>
+                <li>นักดนตรี - El músico</li>
+                <li>รุ่น - La generación</li>
+                <li>ผู้สร้างภาพยนตร์ - La cineasta</li>
+                <li>ที่สมบูรณ์ - completo</li>
+                <li>คนโง่เขลา - El ignorante</li>
+                <li>ผู้ชนะ - El ganador/a</li>
+                <li>ผู้มีความรู้ - El erudito</li>
+                <li>บริษัทค่ายเพลง - La productora musical</li>
+                <li>ยกย่อง, เชิดชู (V.) - rendir el homenaje</li>
+                <li>ทำให้เป็นที่นิยม (V.) - popularizar</li>
+                <li>ปรากฏการณ์ - El fenómeno</li>
+                <li>ตัวการสำคัญ - La figura capital</li>
+                <li>สั่ง (V.) - Encargar</li>
+                <li>ก.บันทึก(เสียง) - La grabación</li>
+                <li>ตีความ (V.) - interpretar</li>
+                <li>อ้างอิง (v.) - Referir</li>
+                <li>ทำให้มั่นใจ (v.) - Asegurar</li>
+                <li>เกษียณ,นำออก (v.) - Retirarse</li>
+                <li>จาก Madrid - Madrileño</li>
+                <li>ต้นบท - El apuntador</li>
+                <li>คสพ. - La relación</li>
+                <li>อภิปราย (V.) - Comentar</li>
+                <li>บ้าระห่ำ, ฉุนเฉียว - rabioso/a</li>
+                <li>ป่าเถื่อน - salvaje</li>
+                <li>ทำให้สงบ, เย็นลง (V.) - templar</li>
+                <li>กระวนกระวาย (V.) - alterarse</li>
+                <li>โล่ง - suelto</li>
+                <li>ค.เงียบสงบ - La serenidad</li>
             </ul>
         </div>
     </div>
