--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="modalContainer" class="modal hidden">
         <div class="modal-content">
             <span id="closeModalButton" class="close-button">&times;</span>
-            <p> Vocabulary 👩🏻‍🏫 </p>
+            <h1> Vocabulary 👩🏻‍🏫 </h1>
             <ul>
                 <li>ภูเขาไฟ - el volcan</li>
                 <li>กองโจร - la querrillera</li>
