--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
     </div>
 
-    <button id="openModalButton">Note!</button>
+    <button id="openModalButton">Lista De Vocabulario !</button>
 
     <!-- Add a hidden modal container -->
     <div id="modalContainer" class="modal hidden">
